[package]
name = "md2pdf"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

# PDF 书签注入支持
lopdf = "0.34"

# PDF 文本提取（支持 ToUnicode CMap 解析）
pdf-extract = "0.10.0"

# 文件编码支持（GB18030 等）
encoding_rs = "0.8"

# WebView2 PDF 打印支持
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_Security",
] }
